--- a/Proyecto_clase/css/style.css
+++ b/Proyecto_clase/css/style.css
@@ -9,31 +9,30 @@
 /* VARIABLES*/
 
 
---
-
-
-*{
+-- * {
     font-family: 'Roboto Mono', monospace;
 
 }
 
-:root{
+:root {
 
     /* VARIABLES */
 
     --padding-container: 80px 0;
     --color-title: #d9cddb;
     --color-bg-hero: #ff00ea;
-    --color-hero:#ffdffc;
+    --color-hero: #ffdffc;
     --color-links: #ffffff;
-    --color-bg-saludo:#bd00b3;
-    --color-saludo:#ffd0f9;
+    --color-bg-saludo: #bd00b3;
+    --color-saludo: #ffd0f9;
 }
 
 
-body{
+body {
 
     font-family: 'Roboto Mono', monospace;
+    background: rgb(41, 76, 255);
+    background: radial-gradient(circle, rgba(41, 76, 255, 1) 0%, rgba(255, 39, 200, 0.9360119047619048) 100%);
 }
 
 .hero {
@@ -49,13 +48,13 @@ body{
     grid-template-rows: 1fr 4fr;
     color: var(--color-hero);
 
-    
 
-    
+
+
 
 }
 
-.hero::before{
+.hero::before {
     content: "";
     position: absolute;
     top: 0;
@@ -64,27 +63,28 @@ body{
     height: 100%;
 
 
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 0.5) 100%), url(/Proyecto_clase/img/matethink.jpg);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(/Proyecto_clase/img/matethink.jpg);
     background-size: cover;
     clip-path: polygon(0 0, 100% 0%, 100% 50%, 61% 90%, 35% 90%, 0% 50%);
     z-index: -1;
 }
 
-.container{
+.container {
     width: 90%;
     max-width: 1200px;
-    margin: 0 auto; /* auto para centrar en pantalla*/
+    margin: 0 auto;
+    /* auto para centrar en pantalla*/
     padding: var(--padding-container);
     /* overflow: hidden; */
     /* background-color: rgb(116, 116, 116); */
     /* clip-path: polygon(0 0, 100% 1%, 100% 50%, 61% 90%, 35% 90%, 0% 50%); */
 
-    
+
 
 
 }
 
-.nav{
+.nav {
     --padding-container: 0;
     height: 100%;
     display: flex;
@@ -92,13 +92,13 @@ body{
 
 }
 
-.navTitle{
+.navTitle {
     font-weight: 400;
-    
+
 }
 
 
-.navLink{
+.navLink {
     margin-left: auto;
     pading: 0;
     display: grid;
@@ -107,28 +107,29 @@ body{
     gap: 3em;
 }
 
-.navItems{
+.navItems {
     list-style: none;
 }
-.navLinks{
+
+.navLinks {
     color: var(--color-links);
     text-decoration: none;
 }
 
-.navMenu{
+.navMenu {
     margin-left: auto;
     cursor: pointer;
     /* solo para mobile */
     display: none;
 }
 
-.navClose{
+.navClose {
     display: none;
 }
 
-.heroContainer{
+.heroContainer {
     max-width: 800px;
-    --padding-container:0;
+    --padding-container: 0;
     display: grid;
     grid-auto-flow: row;
     grid-auto-rows: max-content;
@@ -139,15 +140,15 @@ body{
 
 }
 
-.heroTitle{
+.heroTitle {
     font-size: 3rem;
 }
 
-.heroParagraph{
+.heroParagraph {
     margin-bottom: auto;
 }
 
-.saludo{
+.saludo {
     display: inline-block;
     background-color: var(--color-bg-saludo);
     justify-self: center;
@@ -156,4 +157,14 @@ body{
     padding: 16px 24px;
     border-radius: 8px;
     font-size: 1.5rem;
+}
+
+.acercaDeEncabezado{
+
+    display: block;
+    position: relative;
+    align-self: center;
+
+
+
 }
