--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ iframe{
 }
 
 .redes{
-
+    position: relative;
     width: 100%;
     min-height: 200px;
     max-height: 320px;
@@ -274,11 +274,12 @@ iframe{
 
 .redesContainer{
     /* position: relative; */
-    padding: 10%;
+    /* padding: 10px 10px; */
     display:flex;
     flex-wrap: wrap;
+    flex-direction: row;
     width: 80%;  
-    align-content: space-around;
+    align-content: center;
     justify-content: space-between;
     gap: 32px;
 
