--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
     height: 100%;
 
 
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(/Proyecto_clase/img/matethink.jpg);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(/img/matethink.jpg);
     background-size: cover;
     clip-path: polygon(0 0, 100% 0%, 100% 50%, 61% 90%, 35% 90%, 0% 50%);
     z-index: -1;
